Add deployment of zip files